🍞🚏 Updated with Glitch

--- a/public/styles.css
+++ b/public/styles.css
@@ -31,8 +31,12 @@
 
 .form-window {
     position: absolute;
-    right: 40px;
-
+  margin: auto;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 70%;
+  left: 45%;
+  
 }
 
 .submitted-message {
@@ -49,13 +53,23 @@
 
 h1 {
   font-family: "Monaco";
-  margin-bottom: -1px;
-   }
+  margin: auto;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 20%;
+  left: 45%;
+}
 
-ul, li {
-    list-style: none;
-    font-family: "Monaco";
-    font-size: 12px;
+a {
+  font-family: "Monaco";
+  font-size: 10px;
+  text-decoration: none;
+  color: blue;
+  margin: auto;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 25%;
+  left: 45%;
 }
 
 p {
@@ -63,16 +77,85 @@ p {
   font-size: 10px;
 }
 
-a {
-   font-family: "Monaco";
-  font-size: 10px;
-  color: blue;
-  text-decoration: none;
+ol {
+
+  font-family: "Monaco";
+  font-size: 12px;
+  margin: auto;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 45%;
+  left: 65%;
 }
 
+.instructions { 
+  width: 20%;
+  margin: auto;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 38%;
+  left: 45%;
+  
+}
 
+@media only screen and (max-width: 768px) {
+  
+h1 {
+  font-family: "Monaco";
+  margin: auto;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  width: 80%;
+  text-align: center;
+}
 
-.instructions {
-  width: 300px;
-  margin-top: 20px;
+a {
+  font-family: "Monaco";
+  font-size: 10px;
+  text-decoration: none;
+  color: blue;
+  margin: auto;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  text-align: center;
+}
+
+p {
+  font-family: "Monaco";
+  font-size: 10px;
+
+}
+
+ol {
+
+  font-family: "Monaco";
+  font-size: 12px;
+  margin: auto;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 58%;
+  left: 50%;
+}
+
+.instructions { 
+  width: 80%;
+  margin: auto;
+  position: absolute;
+  top: 28%;
+  left: 50%;
+  
+}
+  
+  .form-window {
+  position: absolute;
+  margin: auto;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  
 }
